# SNPlayer

./: .clang-format  .gitignore  README.md
doc/: 线程模型.md
framework/: CMakeLists.txt
framework/base/: RingBuffer.cpp  RingBuffer.h  SNRet.h
framework/base/error/: FrameworkError.h  SNError.h
framework/base/media/: IAVBSF.cpp  IAVBSF.h  IMediaFrame.h  ISNPacket.cpp  ISNPacket.h  SNAVFrame.cpp  SNAVFrame.h  SNAVPacket.cpp  SNAVPacket.h  SNFrame.cpp  SNFrame.h  SNMediaInfo.h  SNPacket.cpp  SNPacket.h  StreamInfo.h
framework/codec/: CMakeLists.txt  DecoderFactory.cpp  DecoderFactory.h  ICodec.cpp  ICodec.h  IDecoder.cpp  IDecoder.h  SNActiveDecoder.cpp  SNActiveDecoder.h  SNFFDecoder.cpp  SNFFDecoder.h
framework/data_source/: CMakeLists.txt  DataSourceFactory.cpp  DataSourceFactory.h  IDataSource.cpp  IDataSource.h
framework/data_source/curl/: CurlConnection.cpp  CurlConnection.h  CurlConnectionManager.cpp  CurlConnectionManager.h  CurlDataSource.cpp  CurlDataSource.h
framework/datasource/: CMakeLists.txt  DataSourceFactory.cpp  DataSourceFactory.h  DataSourcePrototype.cpp  DataSourcePrototype.h  IDataSource.cpp  IDataSource.h
framework/datasource/curl/: CurlConnection.cpp  CurlConnection.h  CurlConnectionManager.cpp  CurlConnectionManager.h  CurlDataSource.cpp  CurlDataSource.h
framework/demuxer/: AVFFDemuxer.cpp  AVFFDemuxer.h  AVFormatDemuxer.cpp  AVFormatDemuxer.h  CMakeLists.txt  DemuxerFactory.cpp  DemuxerFactory.h  DemuxerPrototype.cpp  DemuxerPrototype.h  DemuxerService.cpp  DemuxerService.h  IDemuxer.cpp  IDemuxer.h
framework/demuxer/bsf/: AVBSFFactory.cpp  AVBSFFactory.h  IAVBSF.cpp  IAVBSF.h
framework/render/: CMakeLists.txt
framework/render/audio/: IAudioRender.cpp  IAudioRender.h
framework/render/video/: IVideoRender.cpp  IVideoRender.h
framework/utils/: CMakeLists.txt  ReaderWriterqueue.h  SNConcurQueue.h  SNFFUtil.cpp  SNFFUtil.h  SNFFUtils.cpp  SNFFUtils.h  SNJson.h  SNLog.cpp  SNLog.h  SNSpscQueue.h  SNThread.cpp  SNThread.h  SNTimer.cpp  SNTimer.h  SNUtils.cpp  SNUtils.h
framework/utils/log/: SNLog.cpp  SNLog.h
framework/utils/os/: SNSysInfoUtil.cpp  SNSysInfoUtil.h
framework/utils/thread/: SNThread.cpp  SNThread.h
media_player/: BufferController.cpp  BufferController.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  IMediaPlayer.h  MediaPacketQueue.cpp  MediaPacketQueue.h  MediaPlayer.h  MediaPlayerDef.h  MediaPlayerUtil.cpp  MediaPlayerUtil.h  PlayerError.h  PlayerMsgController.cpp  PlayerMsgController.h  PlayerMsgProcessor.cpp  PlayerMsgProcessor.h  PlayerNotifier.cpp  PlayerNotifier.h  PlayerParams.cpp  PlayerParams.h  PlayerStatistic.cpp  PlayerStatistic.h  ReferClock.cpp  ReferClock.h  SnPlayer.cpp  SnPlayer.h
player/: CMakeLists.txt  IMediaPlayer.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerDef.h  PlayerDefinition.h  PlayerMsgController.cpp  PlayerMsgController.h  PlayerMsgProcessor.cpp  PlayerMsgProcessor.h  PlayerParams.cpp  PlayerParams.h  PlayerParamsSet.cpp  PlayerParamsSet.h  SivinPlayer.cpp  SivinPlayer.h  SnPlayer.cpp  SnPlayer.h
tests/: CMakeLists.txt
tests/datasource/: DataSourceTest.cpp
tests/demuxer/: DemuxerTest.cpp
tests/player/: PlayerTest.cpp
tests/thread/: ThreadTest.cpp
